tests/fixtures/invalid/store_type_mismatch.nl
fn main -> void
    let ptr ptr_i64 = alloc(1)
    store(ptr, false)
